--- a/fatcatmap/templates/source/landing.haml
+++ b/fatcatmap/templates/source/landing.haml
@@ -7,5 +7,6 @@
 
   %head
     %title << Hello, fatcatmap! ^.^
+    %link rel="stylesheet" href="[[ asset.style('sample.css') ]]"
 
   %body -> %b << Hi there world
