Added graph models, graph platform

--- a/fatcatmap/templates/source/landing.haml
+++ b/fatcatmap/templates/source/landing.haml
@@ -9,4 +9,14 @@
     %title << Hello, fatcatmap! ^.^
     %link rel="stylesheet" href="[[ asset.style('sample.css') ]]"
 
-  %body -> %b << Hi there world
+  %body
+
+    %b 
+      [[ message ]]
+
+    %p 
+      paragraph action
+
+      multiple lines
+
+      cool stuff
