added structure for services. getting errre with protorpc

--- a/fatcatmap/templates/source/landing.haml
+++ b/fatcatmap/templates/source/landing.haml
@@ -11,6 +11,7 @@
     %script type="text/javascript" src="[[ asset.script('core/d3/d3.v3.js')]]"
     %script type="text/javascript" src="[[ asset.script('core/jacked/jacked.js')]]"
     %script type="text/javascript" src="[[ asset.script('core/lawnchair/lawnchair-0.6.1.js')]]"
+    %script type="text/javascript" src="[[ asset.script('core/apptools/apptools-canteen.js')]]"
 
     
     %script type="text/javascript"
