Updating canteen (along with Python dependencies), fixing HAML issue and preparing for Redis support

--- a/fatcatmap/templates/source/landing.haml
+++ b/fatcatmap/templates/source/landing.haml
@@ -7,6 +7,8 @@
 
   %head
     %title << Hello, fatcatmap! ^.^
-    %link rel="stylesheet" href="[[ asset.style('sample.css') ]]"
+    %link rel="stylesheet" href="{{ asset.style('sample.css') }}"
 
-  %body -> %b << Hi there world
+  %body
+    %b
+      {{ message }}
