--- a/fatcatmap/templates/source/landing.haml
+++ b/fatcatmap/templates/source/landing.haml
@@ -3,37 +3,25 @@
 ; landing :)
 ;
 
-%html
-
+%html lang="en"
   %head
     %title << Hello, fatcatmap! ^.^
-    %link rel="stylesheet" href="[[ asset.style('sample.css') ]]"
-
-
+    %link rel="stylesheet" href="[[ asset.style('common.css') ]]" type="text/css"
+    %link rel="stylesheet" href="[[ asset.style('site/home.css') ]]" type="text/css"
+    %link rel="stylesheet" href="//cloud.typography.com/6717292/775624/css/fonts.css" type="text/css"
+    %meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
   %body
-
+    %h1 << something witty
     %b
       [[ message ]]
-
     %p
       paragraph action
-
       multiple lines
-
       cool stuff
 
-    %script type="text/javascript" src="[[ asset.script('core/d3/d3.v3.js')]]"
-    %script type="text/javascript" src="[[ asset.script('core/jacked/jacked.js')]]"
-    %script type="text/javascript" src="[[ asset.script('core/lawnchair/lawnchair-0.6.1.js')]]"
-    %script type="text/javascript" src="[[ asset.script('core/apptools/apptools-canteen.js')]]"
+    %div.btn.btn-default << hi
 
-
-    %script type="text/javascript"
-      var Keen=Keen||{configure:function(e){this._cf=e},addEvent:function(e,t,n,i){this._eq=this._eq||[],this._eq.push([e,t,n,i])},setGlobalProperties:function(e){this._gp=e},onChartsReady:function(e){this._ocrq=this._ocrq||[],this._ocrq.push(e)}};(function(){var e=document.createElement("script");e.type="text/javascript",e.async=!0,e.src=("https:"==document.location.protocol?"https://":"http://")+"dc8na2hxrj29i.cloudfront.net/code/keen-2.1.0-min.js";var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)})();
-
-      // Configure the Keen object with your Project ID and (optional) access keys.
-      //Keen.configure({
-      //  projectId: "your_project_id",
-      //  writeKey: "your_write_key", // required for sending events
-      //  readKey: "your_read_key"    // required for doing analysis
-      });
+    %script type="text/javascript" src="[[ asset.script('core/d3/d3.v3.js')]]" async defer
+    %script type="text/javascript" src="[[ asset.script('core/jacked/jacked.js')]]" async defer
+    %script type="text/javascript" src="[[ asset.script('core/lawnchair/lawnchair-0.6.1.js')]]" async defer
+    %script type="text/javascript" src="[[ asset.script('core/apptools/apptools-canteen.js')]]" async defer
