Fixed up landing scripts, fixed up LESS import structure, [added humans/robots].txt

--- a/fatcatmap/assets/less/site/home.less
+++ b/fatcatmap/assets/less/site/home.less
@@ -1,4 +1,6 @@
 
+@import "core/base.less";
+
 body {
 
   padding: 20px;
@@ -6,9 +8,14 @@ body {
   font-family: "Ideal Sans SSm A", "Ideal Sans SSm B", sans-serif;
   font-weight: 400;
 
-  h1 {
-    font-family: "Ideal Sans A", "Ideal Sans B", sans-serif;
-    font-weight: 200;
-  }
+}
 
+h1 {
+  font-family: "Ideal Sans A", "Ideal Sans B", sans-serif;
+  font-weight: 200;
+}
+
+div {
+  .btn;
+  .btn-default;
 }
