--- a/fatcatmap/templates/source/landing.haml
+++ b/fatcatmap/templates/source/landing.haml
@@ -19,9 +19,6 @@
       multiple lines
       cool stuff
 
-    %div.btn.btn-default << hi
+    %div << hi
 
-    %script type="text/javascript" src="[[ asset.script('core/d3/d3.v3.js')]]" async defer
-    %script type="text/javascript" src="[[ asset.script('core/jacked/jacked.js')]]" async defer
-    %script type="text/javascript" src="[[ asset.script('core/lawnchair/lawnchair-0.6.1.js')]]" async defer
-    %script type="text/javascript" src="[[ asset.script('core/apptools/apptools-canteen.js')]]" async defer
+    %script type="text/javascript" src="[[ asset.script('core/ext-bundle.min.js')]]" async defer
