--- a/fatcatmap/assets/less/core/base.less
+++ b/fatcatmap/assets/less/core/base.less
@@ -1,52 +1,34 @@
 
 // Core variables and mixins
 @import "less/variables.less";
-@import "less/mixins.less";
 
-// Reset and dependencies
-@import "less/normalize.less";
-@import "less/print.less";
-//@import "less/glyphicons.less";
-
-// Core CSS
-@import "less/scaffolding.less";
-@import "less/type.less";
-@import "less/grid.less";
-@import "less/buttons.less";
-//@import (reference) "less/code.less";
-//@import (reference) "less/tables.less";
-//@import (reference) "less/forms.less";
-
-// Components
-//@import "less/component-animations.less";
-//@import "less/dropdowns.less";
-//@import "less/button-groups.less";
-//@import "less/input-groups.less";
-//@import "less/navs.less";
-//@import "less/navbar.less";
-//@import "less/breadcrumbs.less";
-//@import "less/pagination.less";
-//@import "less/pager.less";
-//@import "less/labels.less";
-//@import "less/badges.less";
-//@import "less/jumbotron.less";
-//@import "less/thumbnails.less";
-//@import "less/alerts.less";
-//@import "less/progress-bars.less";
-//@import "less/media.less";
-//@import "less/list-group.less";
-//@import "less/panels.less";
-//@import "less/responsive-embed.less";
-//@import "less/wells.less";
-//@import "less/close.less";
-
-// Components w/ JavaScript
-//@import "less/modals.less";
-//@import "less/tooltip.less";
-//@import "less/popovers.less";
-//@import "less/carousel.less";
-
-// Utility classes
-@import "less/utilities.less";
-@import "less/responsive-utilities.less";
-
+@import (reference) "less/mixins.less";
+@import (reference) "less/type.less";
+@import (reference) "less/grid.less";
+@import (reference) "less/buttons.less";
+@import (reference) "less/code.less";
+@import (reference) "less/tables.less";
+@import (reference) "less/forms.less";
+@import (reference) "less/component-animations.less";
+@import (reference) "less/dropdowns.less";
+@import (reference) "less/button-groups.less";
+@import (reference) "less/input-groups.less";
+@import (reference) "less/navs.less";
+@import (reference) "less/navbar.less";
+@import (reference) "less/breadcrumbs.less";
+@import (reference) "less/pagination.less";
+@import (reference) "less/pager.less";
+@import (reference) "less/labels.less";
+@import (reference) "less/badges.less";
+@import (reference) "less/jumbotron.less";
+@import (reference) "less/thumbnails.less";
+@import (reference) "less/alerts.less";
+@import (reference) "less/progress-bars.less";
+@import (reference) "less/media.less";
+@import (reference) "less/list-group.less";
+@import (reference) "less/panels.less";
+@import (reference) "less/responsive-embed.less";
+@import (reference) "less/wells.less";
+@import (reference) "less/close.less";
+@import (reference) "less/utilities.less";
+@import (reference) "less/responsive-utilities.less";
