--- a/fatcatmap/assets/less/core/base.less
+++ b/fatcatmap/assets/less/core/base.less
@@ -2,6 +2,18 @@
 // Core variables and mixins
 @import "less/variables.less";
 
+// FCM layout
+@header_height: 5.5em;
+@footer_height: 3em;
+@appstage_margin: 1em;
+
+// FCM typography
+@text_font_family: "Ideal Sans SSm A", "Ideal Sans SSm B", sans-serif;
+@text_font_weight: 400;
+@heading_font_family: "Ideal Sans A", "Ideal Sans B", sans-serif;
+@heading_font_weight: 200;
+
+// Bootstrap imports
 @import (reference) "less/mixins.less";
 @import (reference) "less/type.less";
 @import (reference) "less/grid.less";
