--- a/fatcatmap/assets/less/layouts/mapper.less
+++ b/fatcatmap/assets/less/layouts/mapper.less
@@ -29,11 +29,14 @@
   top: 0;
   left: 0;
   right: 0;
+  z-index: 1000;
 
   // logotext
   h1 {
+    z-index: 1000;
     position: absolute;
     left: @appstage_margin;
+    .h1;
   }
 
 }
@@ -47,6 +50,7 @@
   bottom: 0;
   left: 0;
   right: 0;
+  z-index: 300;
 
   // both footer labels
   small {
