Added title, fixed issues with overwritten title

--- a/fatcatmap/templates/source/core/__base.html
+++ b/fatcatmap/templates/source/core/__base.html
@@ -6,6 +6,7 @@
     <!-- meta -->
     <meta charset="utf-8">
     <meta http-equiv="x-dns-prefetch-control" content="on">
+    <title>{%- block title -%}fatcatmap ^.^{%- endblock title -%}</title>
 
     <!-- info -->
     <meta name="author" content="momentum labs">
