Removing old logic + services, added empty service, added apptools JS, fixed services so they actually work

--- a/fatcatmap/templates/source/core/__base.html
+++ b/fatcatmap/templates/source/core/__base.html
@@ -58,10 +58,11 @@
     <div id="js-south" style="display:none;">
 
       <!-- bundle/page JS -->
-      <script id="js-ext" defer type="text/javascript" src="{{ asset.script("core/ext-bundle.min.js") }}"></script>
-      <script id="js-page" defer type="text/javascript" src="{%- block page_js -%}{%- endblock -%}"></script>
+      <script id="js-ext" type="text/javascript" src="{{ asset.script("core/ext-bundle.min.js") }}"></script>
+      <script id="js-page" type="text/javascript" src="{%- block page_js -%}{%- endblock -%}"></script>
 
       <!-- context -->
+      <script id="js-struct" type="text/javascript">(function(apptools){ {{- services.describe(javascript=True).replace(' ', '')|safe -}} })(window.apptools);</script>
       <script id="js-context" type="application/json">{}</script>
 
     </div><!-- end #js-south -->
