--- a/fatcatmap/assets/less/fcm.less
+++ b/fatcatmap/assets/less/fcm.less
@@ -1,8 +1,17 @@
 
+//== FCM Theme
+@theme: 'scaffold';
+
 //== FCM layout
 @header_height: 5.5em;
 @footer_height: 3em;
 @appstage_margin: 1em;
+
+//== FCM Logo
+@logo_size: 3em;
+@logo_slant: 45deg;
+@logo_gradient_start: rgba(242,242,24,0.88) 0%;
+@logo_gradient_end: rgba(119,215,29,0.88) 100%;
 
 //== FCM typography
 @text_font_family: "Ideal Sans SSm A", "Ideal Sans SSm B", sans-serif;
