Updating footer text to be legible

--- a/fatcatmap/assets/less/fcm.less
+++ b/fatcatmap/assets/less/fcm.less
@@ -13,6 +13,11 @@
 @logo_gradient_start: rgba(242,242,24,0.88) 0%;
 @logo_gradient_end: rgba(119,215,29,0.88) 100%;
 
+//== FCM Footer
+@footer_text_color: #333;
+@footer_text_size: 16px;
+@footer_text_weight: 200;
+
 //== FCM typography
 @text_font_family: "Ideal Sans SSm A", "Ideal Sans SSm B", sans-serif;
 @text_font_weight: 400;
