--- a/fatcatmap/assets/less/layouts/mapper.less
+++ b/fatcatmap/assets/less/layouts/mapper.less
@@ -54,6 +54,9 @@
 
   // both footer labels
   small {
+    color: @footer_text_color;
+    font-size: @footer_text_size;
+    font-weight: @footer_text_weight;
     display: inline-block;
   }
 
