Updates to CSS, font rendering, and added/customized fonts. Selected serif to go well with Ideal Sans - Archer! :)

--- a/fatcatmap/assets/less/components/mapper.less
+++ b/fatcatmap/assets/less/components/mapper.less
@@ -90,7 +90,8 @@ svg svg {
   stroke: #ddd;
   stroke-opacity: .8;
   cursor: pointer;
-  fill: transparent;
+  stroke-width: 4px;
+  fill: #ddd;
 }
 
 .link {
