--- a/fatcatmap/assets/less/layouts/mapper.less
+++ b/fatcatmap/assets/less/layouts/mapper.less
@@ -18,6 +18,7 @@
   left: 0;
   right: 0;
   overflow: hidden;
+  text-rendering: geometricPrecision;
 
 }
 
@@ -32,14 +33,13 @@
   right: 0;
   z-index: 1000;
 
-  // logotext
-  h1 {
-    z-index: 1000;
-    position: absolute;
-    left: @appstage_margin;
-    .logo;
-  }
+}
 
+#logo {
+  z-index: 1000;
+  position: absolute;
+  left: @appstage_margin;
+  .logo;
 }
 
 #appfooter {
