--- a/fatcatmap/templates/source/layouts/mapper.html
+++ b/fatcatmap/templates/source/layouts/mapper.html
@@ -3,7 +3,7 @@
 {% block appframe %}
         <!-- header -->
         <header id='appheader'>
-            <h1>fatcatmap</h1>
+            <h1 id='logo'>fatcatmap</h1>
         </header><!-- end header -->
 
         <!-- footer -->
