Initial changes for a click Polymer/Dart version of the FCM frontend

--- a/fatcatmap/templates/source/core/__base.html
+++ b/fatcatmap/templates/source/core/__base.html
@@ -40,6 +40,10 @@
     <!-- north async -->
     <div id="js-async-north" style="display:none;"></div>
     {% endblock head %}
+
+    <!-- components -->
+    <link rel="import" href="/assets/components/mapper.html">
+
   </head>
   <body class="{{ theme|default('fcm-dark') }} alpha">
 
