--- a/fatcatmap/templates/source/landing.haml
+++ b/fatcatmap/templates/source/landing.haml
@@ -4,4 +4,4 @@
 ;
 
 -extends "layouts/mapper.html"
--block page_js << {{ asset.script("mapper.js" if __debug__ else "mapper.min.js") }}
+-block page_js << {{ asset.script("mapper.js" if __debug__ else "mapper.js") }}
