Flatly styles (to supplement Bootstrap), new logon button, nice preload fade-in

--- a/fatcatmap/assets/less/core/base.less
+++ b/fatcatmap/assets/less/core/base.less
@@ -34,6 +34,10 @@
 @import (reference) "less/utilities.less";
 @import (reference) "less/responsive-utilities.less";
 
+// Overrides from Flatly
+@import (reference) "flatly/bootswatch.less";
+@import (reference) "flatly/variables.less";
+
 // Overrides from FCM
 @import "fcm.less";
 @import "themes/fcm-@{theme}.less";
