--- a/fatcatmap/templates/source/layouts/mapper.html
+++ b/fatcatmap/templates/source/layouts/mapper.html
@@ -4,10 +4,14 @@
         <!-- header -->
         <header id='appheader'>
             <h1 id='logo'>fatcatmap</h1>
+
+            <section id='identity'>
+                <button type="button" id="logon" class="transparent btn btn-success">Sign in</button>
+            </section><!-- end #identity -->
         </header><!-- end header -->
 
         <!-- footer -->
-        <footer id='appfooter'>
+        <footer id='appfooter' class='transparent'>
             {% block footer -%}
             <small id="brand">momentum labs - fatcatmap</small>
             <small id="copyright">copyright (&copy; 2014) - technology preview</small>
