--- a/fatcatmap/templates/source/partials/mappers/svg.html
+++ b/fatcatmap/templates/source/partials/mappers/svg.html
@@ -1,5 +1,5 @@
 
-        <svg id='catnip' class='svg mapper viewport' version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink= "http://www.w3.org/1999/xlink">
+        <svg id='catnip' class='transparent svg mapper viewport' version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink= "http://www.w3.org/1999/xlink">
             <defs>
                 <clipPath id='node-circle-mask'clipPathUnits="userSpaceOnUse">
                     <circle r="20" cx="30" cy="30"></circle>
