--- a/fatcatmap/assets/less/layouts/mapper.less
+++ b/fatcatmap/assets/less/layouts/mapper.less
@@ -56,6 +56,7 @@
 }
 
 #logon {
+  outline: none !important;
   background-color: transparent;
   opacity: 0.95;
   border-color: #4cae4c;
@@ -63,7 +64,7 @@
   border-radius: 5px;
   border-style: solid;
   border-width: 1px;
-  border-color: rgba(119, 215, 29, 0.88);
+  border-color: rgba(119, 215, 29, 0.75);
   color: #fefefe;
   padding: .5em .9em;
   margin-top: .5em;
@@ -71,9 +72,83 @@
   transition-duration: 0.2s;
 
   &:hover {
+    color: #fff;
+    border-color: rgba(119, 215, 29, 0.85);
+    background: linear-gradient(@logo_slant, @logo_gradient_start, @logo_gradient_end);
+  }
+
+  &.active {
+    color: #fff;
+    border-color: rgba(119, 215, 29, 0.85);
     background: linear-gradient(@logo_slant, @logo_gradient_start, @logo_gradient_end);
   }
 }
+
+#signon-providers {
+  background: transparent;
+  top: 10px;
+  position: relative;
+  color: #fefefe;
+  border-radius: 5px;
+  width: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  height: 120px;
+  line-height: 2em;
+  border: 2px solid #666;
+
+  // Transitions
+  transition-property: top, opacity;
+  transition-duration: 0.25s;
+
+  &.transparent {
+    top: 5px;
+  }
+
+  &:before {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-width: 7px;
+    border-style: solid;
+    border-color: transparent transparent #666;
+    top: -14px;
+    left: 42%;
+    opacity: 0.65;
+  }
+
+  div {
+    cursor: pointer;
+    opacity: 0.7;
+    transition-property: opacity;
+    transition-duration: 0.1s;
+    color: #fefefe;
+  }
+
+  div:hover {
+    color: white !important;
+    opacity: 0.9;
+  }
+}
+
+// signon types
+#gplus-signon {
+  background: #DD4B39;
+}
+
+#fb-signon {
+  background: #335795;
+}
+
+#tw-signon {
+  background: #4099F;
+}
+
+#gh-signon {
+  background: #000;
+}
+
 
 #appfooter {
 
