--- a/fatcatmap/assets/less/layouts/mapper.less
+++ b/fatcatmap/assets/less/layouts/mapper.less
@@ -149,6 +149,15 @@
   background: #000;
 }
 
+#appspinner {
+  position: fixed;
+  bottom: 2em;
+  right: 2em;
+  display: inline-block;
+  color: white;
+  width: 31px;
+  height: 43px;
+}
 
 #appfooter {
 
