--- a/fatcatmap/templates/source/layouts/mapper.html
+++ b/fatcatmap/templates/source/layouts/mapper.html
@@ -1,6 +1,9 @@
 {% extends "core/__base.html" %}
 
 {% block appframe %}
+        <!-- spinner -->
+        <div id='appspinner' class='fcm-pre loading spinner'>S</div>
+
         <!-- header -->
         <header id='appheader'>
             <h1 id='logo'>fatcatmap</h1>
