Working browsability, although it is pretty damn jank.

--- a/fatcatmap/assets/less/layouts/mapper.less
+++ b/fatcatmap/assets/less/layouts/mapper.less
@@ -194,6 +194,11 @@
 
 }
 
+#map {
+  transition-property: opacity;
+  transition-duration: 0.2s;
+}
+
 #catnip {
   // animation (fade-in/fade-out)
   transition-property: opacity;
