--- a/fatcatmap/templates/source/core/__base.html
+++ b/fatcatmap/templates/source/core/__base.html
@@ -49,7 +49,7 @@
     </div><!-- end #appframe -->
 
     <!-- appstage -->
-    <div id="appstage" class="transparent container-fluid">
+    <div id="appstage" class="container-fluid">
       {% block appstage %}<h2>appstage</h2>{% endblock %}
     </div><!-- end #appstage -->
 
