--- a/fatcatmap/templates/source/partials/mappers/svg.html
+++ b/fatcatmap/templates/source/partials/mappers/svg.html
@@ -6,8 +6,8 @@
                 </clipPath>
             </defs>
 
-            <!-- Mapper -->
-            <svg id='map'></svg>
+            <!-- mapper -->
+            <svg id='map' class='transparent'></svg>
 
         </svg><!-- end #catnip -->
 
