--- a/fatcatmap/assets/less/layouts/mapper.less
+++ b/fatcatmap/assets/less/layouts/mapper.less
@@ -93,7 +93,6 @@
   width: 100px;
   margin-left: auto;
   margin-right: auto;
-  height: 120px;
   line-height: 2em;
   border: 2px solid #666;
 
@@ -128,7 +127,7 @@
 
   div:hover {
     color: white !important;
-    opacity: 0.9;
+    opacity: 1.0;
   }
 }
 
@@ -142,7 +141,7 @@
 }
 
 #tw-signon {
-  background: #4099F;
+  background: #4099FF;
 }
 
 #gh-signon {
