--- a/fatcatmap/assets/less/core/common.less
+++ b/fatcatmap/assets/less/core/common.less
@@ -36,7 +36,11 @@
   transition-duration: 0.4s;
 }
 
+.framepad {
+  margin: 0em 2.2em;
+}
 
+// Preload font & spinner
 .fcm-pre {
   font-family: "fatcatmap-preload";
   speak: none;
@@ -55,6 +59,15 @@
   font-size: 2.2em;
   text-align: center;
   opacity: 0.75;
+}
+
+// Regular content
+#appstage section.content {
+  color: white;
+
+  .main-heading {
+    border-bottom: 1px solid rgba(90, 90, 90, .8);
+  }
 }
 
 @import "layouts/mapper.less";
