--- a/fatcatmap/templates/source/layouts/mapper.html
+++ b/fatcatmap/templates/source/layouts/mapper.html
@@ -1,13 +1,8 @@
-{% extends "core/__base.html" %}
+{% extends "layouts/base.html" %}
 
-{% block appframe %}
-        <!-- spinner -->
-        <div id='appspinner' class='fcm-pre loading spinner'>S</div>
+{% block logo -%}<h1 id="logo">fatcatmap</h1>{%- endblock %}
 
-        <!-- header -->
-        <header id='appheader'>
-            <h1 id='logo'>fatcatmap</h1>
-
+{% block appheader %}
             <section id='identity'>
                 <button type="button" id="logon" onclick="toggle('#signon-providers');toggle(event.target,'active')" class="transparent btn btn-success">Sign in</button>
                 <div id="signon-providers" class="transparent">
@@ -17,16 +12,7 @@
                     <div id="gh-signon">gh</div>
                 </div><!-- end div#signon-providers -->
             </section><!-- end #identity -->
-        </header><!-- end header -->
-
-        <!-- footer -->
-        <footer id='appfooter' class='transparent'>
-            {% block footer -%}
-            <small id="brand">momentum labs - fatcatmap</small>
-            <small id="copyright">copyright (&copy; 2014) - technology preview</small>
-            {%- endblock footer %}
-        </footer><!-- end footer -->
-{% endblock %}
+{% endblock appheader %}
 
 {% block appstage %}
     <section>
