Fixed small CSS bugs including logo cursor.

--- a/fatcatmap/assets/less/layouts/mapper.less
+++ b/fatcatmap/assets/less/layouts/mapper.less
@@ -24,7 +24,6 @@
 }
 
 #appheader {
-
   height: @header_height;
 
   //snap header to top
@@ -33,13 +32,13 @@
   left: 0;
   right: 0;
   z-index: 1000;
-
 }
 
 #logo {
   z-index: 1000;
   position: absolute;
   left: @appstage_margin;
+  cursor: pointer;
   .logo;
 }
 
