Adding new iconset to replace old fcm-pre. New font is simply called 'fcm' :). Icons work! Yay

--- a/fatcatmap/assets/less/core/common.less
+++ b/fatcatmap/assets/less/core/common.less
@@ -42,7 +42,7 @@
 
 // Preload font & spinner
 .fcm-pre {
-  font-family: "fatcatmap-preload";
+  font-family: "fcm";
   speak: none;
   font-weight: normal;
   font-variant: normal;
