--- a/fatcatmap/templates/source/core/__base.html
+++ b/fatcatmap/templates/source/core/__base.html
@@ -26,7 +26,7 @@
     <!-- stylesheets -->
     {%- block stylesheets %}
     <link rel="stylesheet" href="{{ asset.style('themes/' + (theme or 'fcm-scaffold') + '/home.css') }}" type="text/css">
-    <link rel="stylesheet" href="https://deliver.fcm-static.org/font-proxy/775624/css/fonts.css" type="text/css">
+    <link rel="stylesheet" href="//deliver.fcm-static.org/font-proxy/775624/css/fonts.css" type="text/css">
     {% endblock %}
 
     {%- if handler.agent.mobile %}
