--- a/fatcatmap/templates/source/core/__base.html
+++ b/fatcatmap/templates/source/core/__base.html
@@ -58,9 +58,9 @@
 
       {% block south -%}
       <!-- bundle/page JS -->
-      <script id="js-ext" type="text/javascript" src="{{ asset.script("core/ext-bundle.min.js") }}"></script>
-      <script id="js-ext" type="text/javascript" src="{{ asset.script("common.min.js" if not __debug__ else "common.js") }}"></script>
-      <script id="js-page" type="text/javascript" src="{%- block page_js -%}{%- endblock -%}"></script>
+      <script id="js-ext" type="text/javascript" nonce="{{ nonce.script }}" src="{{ asset.script("core/ext-bundle.min.js") }}"></script>
+      <script id="js-ext" type="text/javascript" nonce="{{ nonce.script }}" src="{{ asset.script("common.min.js" if not __debug__ else "common.js") }}"></script>
+      <script id="js-page" type="text/javascript" nonce="{{ nonce.script }}" src="{%- block page_js -%}{%- endblock -%}"></script>
 
       <!-- context -->
       <script id="js-context" type="application/json">{{ js_context|json|safe }}</script><!-- end #js-context -->
