--- a/fatcatmap/assets/less/layouts/mapper.less
+++ b/fatcatmap/assets/less/layouts/mapper.less
@@ -36,7 +36,7 @@
 
 #logo {
   z-index: 1000;
-  position: absolute;
+  position: fixed;
   left: @appstage_margin;
   cursor: pointer;
   .logo;
@@ -162,7 +162,7 @@
   height: @footer_height;
 
   // snap footer to bottom
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
