--- a/fatcatmap/assets/less/fcm.less
+++ b/fatcatmap/assets/less/fcm.less
@@ -4,7 +4,7 @@
 
 //== FCM layout
 @header_height: 7em;
-@footer_height: 3em;
+@footer_height: 4em;
 @appstage_margin: 1em;
 
 //== FCM Logo
@@ -22,7 +22,7 @@
 @text_font_family: "Ideal Sans SSm A", "Ideal Sans SSm B", sans-serif;
 @text_font_weight: 400;
 @heading_font_family: "Ideal Sans A", "Ideal Sans B", sans-serif;
-@heading_font_weight: 200;€
+@heading_font_weight: 200;
 
 //== FCM color palette
 @brand-primary:         #428bca;
